[metadata]
name = ngus
version = attr: ngus.__version__
author = attr: ngus.__author__
author_email = sgs@pichove.org
description = A simple HTTP server for handleing file uploads
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blackm0re/ngus

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP :: HTTP Servers

project_urls =
    Bug Tracker = https://github.com/blackm0re/ngus/issues
    Source = https://github.com/blackm0re/ngus

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ngus = ngus.__main__:main
